# ftrio-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PORTING_NOTES.md  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  publish.yml
ftrio/: Cargo.toml
ftrio-cli/: Cargo.toml
ftrio-cli/src/: appconfig.rs  conformance.rs  export.rs  lint.rs  main.rs  release.rs  report.rs  scan.rs  table.rs  util.rs
ftrio-macros/: Cargo.toml
ftrio-macros/src/: lib.rs
ftrio-playground/: Cargo.toml  appsettings.json
ftrio-playground/src/: main.rs
ftrio/src/: config.rs  context.rs  error.rs  lib.rs  parsing.rs  providers.rs  runtime.rs  strategies.rs
ftrio/src/parsing/: overrides.rs  strategy_parser.rs  toggle_parser.rs
ftrio/src/providers/: azure.rs  http.rs  value_provider.rs
ftrio/src/runtime/: buffer.rs  builder.rs  functional.rs  parser_provider.rs
ftrio/src/strategies/: ab_test.rs  attribute_rule.rs  blue_green.rs  boolean.rs  percentage.rs  user_targeting.rs
ftrio/tests/: ab_determinism.rs  attribute.rs  buffer.rs  builder.rs  config.rs  overrides.rs  providers.rs  strategies.rs
ftrio/tests/common/: mod.rs
