[package]
name = "ftrio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `ftrio` CLI: toggle report, manifest export, release-check, and lint (FTRIO001)."
readme = "../README.md"
keywords = ["feature-toggle", "feature-flag", "cli", "lint", "toggle"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ftrio"
path = "src/main.rs"

[dependencies]
ftrio = { path = "../ftrio" }
clap.workspace = true
serde_json.workspace = true
ureq.workspace = true
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
