[package]
name = "ftrio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The `ftrio` CLI: toggle report, manifest export, release-check, and lint (FTRIO001)."
readme = "../README.md"
keywords = ["feature-toggle", "feature-flag", "cli", "lint", "toggle"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ftrio"
path = "src/main.rs"

[dependencies]
# Version requirement is required to publish (the path is stripped, the version is used). It is kept
# in lockstep with the workspace version by the publish workflow, like ftrio's pin on ftrio-macros.
ftrio = { path = "../ftrio", version = "0.1.0" }
clap.workspace = true
serde_json.workspace = true
ureq.workspace = true
syn = { version = "2", features = ["full", "visit", "extra-traits", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
